dBattlestaffCrafter 1.3 - Webhook support, onPaint added, Auto update to latest jar